Fix to make sure that device deactivation is invoked before final close of the device when exit. Bug #687557.

DETAILS:

It is not known whether or not this ever worked, but this change does
make sure that the .uninstalldevice gets invoked before the final
closedevice on exit.

EXPECTED DIFFERENCES.

None detected with regression suite.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@5194 a1074d23-0009-0410-80fe-cf8c14f379e6